--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </hgroup>
         </header>
         <div class="wave1">
-            <img src="wecreate-assets/img/wave-top2.svg" alt="pattern">
+            <img src="img/wave-top2.svg" alt="pattern">
         </div>
         <div class="wave2">
-            <img src="wecreate-assets/img/wave-top.svg" alt="pattern">
+            <img src="img/wave-top.svg" alt="pattern">
         </div>
         <section class="first"> 
             <div class="container">
@@ -35,7 +35,7 @@
                     <button type="button" class="btn1">find out more</button> 
                 </article>
                 <figure>
-                        <img src="wecreate-assets/img/img1.jpg" alt="kid drawing">
+                        <img src="img/img1.jpg" alt="kid drawing">
                 </figure>
             </div>
         </section>
@@ -48,7 +48,7 @@
                     <button type="button" class="btn1">find out more</button> 
                 </article>
                 <figure >
-                        <img src="wecreate-assets/img/img2.jpg" alt="breakfast">
+                        <img src="img/img2.jpg" alt="breakfast">
                 </figure>
             </div>
         </section >
@@ -56,7 +56,7 @@
             <h2>our crazy ideas</h2>
         </div>
         <div class="wave3">
-            <img src="wecreate-assets/img/wave-bottom.svg" alt="pattern">
+            <img src="img/wave-bottom.svg" alt="pattern">
         </div>
         <section class="third">
             <div class="container">
@@ -67,7 +67,7 @@
                     <button type="button" class="btn1">find out more</button> 
                 </article>
                 <figure>
-                        <img src="wecreate-assets/img/img3.jpg" alt="man in teh yellow smoke">
+                        <img src="img/img3.jpg" alt="man in teh yellow smoke">
                 </figure>
             </div>
         </section>
