--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <textarea rows="4"></textarea>
                     <button type="button" class="btn2">send</button> 
                 </form>
+                <p class="copyrights">created by the awwwwesomes in 2017</p>
             </div>
         </footer>
     </body>
