--- a/index.html
+++ b/index.html
@@ -20,18 +20,11 @@
                 <h5>strategy is our first name</h5>
             </hgroup>
         </header>
-        <div class="wave1">
-            <img src="img/wave-top2.svg" alt="pattern">
-        </div>
-        <div class="wave2">
-            <img src="img/wave-top.svg" alt="pattern">
-        </div>
         <section class="first"> 
             <div class="container">
-                <h4>1 .</h4>
                 <article>
                     <h3>projects</h3> 
-                    <p>Af gastropub venmo cliche air plant meh. Mollit man bun nesciunt, commodo synth placeat forage tousled ad pitchfork tilde venmo iceland 3 wolf moon. Cray eu vape flexitarian. Next level DIY odio skateboard, listicle PBR&B shoreditch blog humblebrag cornhole. Blue bottle wayfarers mumblecore af heirloom cillum. Aliquip etsy irony veniam, do whatever vice air plant microdosing paleo wayfarers flannel celiac XOXO. Affogato mumblecore migas blue bottle dolor single-origin coffee.</p>
+                    <p>Af gastropub venmo cliche air plant meh. Mollit man bun nesciunt, commodo synth placeat forage tousled ad pitchfork tilde venmo iceland 3 wolf moon. Cray eu vape flexitarian. Next level DIY odio skateboard, listicle PBR&amp;B shoreditch blog humblebrag cornhole. Blue bottle wayfarers mumblecore af heirloom cillum. Aliquip etsy irony veniam, do whatever vice air plant microdosing paleo wayfarers flannel celiac XOXO. Affogato mumblecore migas blue bottle dolor single-origin coffee.</p>
                     <button type="button" class="btn1">find out more</button> 
                 </article>
                 <figure>
@@ -41,7 +34,6 @@
         </section>
         <section class="second">
             <div class="container">
-                <h4>2 .</h4>
                 <article>
                     <h3>company's culture</h3> 
                     <p>Celiac venmo tilde, put a bird on it vinyl man braid etsy plaid fanny pack next level 3 wolf moon chia single-origin coffee organic. Chillwave activated charcoal cliche, hoodie 3 wolf moon fam pop-up tousled swag hammock wolf bushwick. Ugh blue bottle post-ironic blog williamsburg. Glossier godard disrupt hoodie leggings vexillologist crucifix, iceland truffaut. Microdosing fashion axe biodiesel poutine, waistcoat helvetica salvia meditation ramps twee.</p>
@@ -55,12 +47,8 @@
         <div class="ideas">
             <h2>our crazy ideas</h2>
         </div>
-        <div class="wave3">
-            <img src="img/wave-bottom.svg" alt="pattern">
-        </div>
         <section class="third">
             <div class="container">
-                <h4>3 .</h4>
                 <article>
                     <h3>experience</h3> 
                     <p>Everyday carry cray vegan microdosing waistcoat, godard portland gentrify viral vape hammock. Prism lyft cold-pressed, snackwave bespoke squid schlitz typewriter pinterest jean shorts. Kale chips pitchfork lumbersexual ugh, messenger bag forage kitsch cold-pressed cred cronut meggings umami. Gastropub ethical copper mug, authentic four loko chicharrones salvia fingerstache vaporware chia church-key hoodie single-origin coffee.</p>
@@ -75,12 +63,12 @@
             <div class="container">
                 <h2>say hello<br> to our team</h2>
                 <form action="/mail" method="post">
-                    <p>name</p>
-                    <input type="text">
-                    <p>e-mail</p>
-                    <input type="e-mail">
-                    <p>message</p>
-                    <textarea rows="4"></textarea>
+                    <label for="name">name</label>
+                    <input type="text" id="name">
+                    <label for="mail">e-mail</label>
+                    <input type="e-mail" id="mail">
+                    <label for="message">message</label>
+                    <textarea rows="4" id="message"></textarea>
                     <button type="button" class="btn2">send</button> 
                 </form>
                 <p class="copyrights">created by the awwwwesomes in 2017</p>
