Add header styles

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
                     <li><a href="#">contact</a></li>
                 </ul>
             </nav>
-            <hgroup>
-                <h1>we create.</h1>
-                <h5>strategy is our first name</h5>
-            </hgroup>
+            <h1>we create.</h1>
+            <p class="tagline">strategy is our first name</p>
         </header>
         <section class="first"> 
             <div class="container">
