--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
                 <article>
                     <h3>projects</h3> 
                     <p>Af gastropub venmo cliche air plant meh. Mollit man bun nesciunt, commodo synth placeat forage tousled ad pitchfork tilde venmo iceland 3 wolf moon. Cray eu vape flexitarian. Next level DIY odio skateboard, listicle PBR&amp;B shoreditch blog humblebrag cornhole. Blue bottle wayfarers mumblecore af heirloom cillum. Aliquip etsy irony veniam, do whatever vice air plant microdosing paleo wayfarers flannel celiac XOXO. Affogato mumblecore migas blue bottle dolor single-origin coffee.</p>
-                    <button type="button" class="btn1">find out more</button> 
+                    <button type="button" class="btn btn1_1">find out more</button> 
                 </article>
                 <figure>
                         <img src="img/img1.jpg" alt="kid drawing">
                 </figure>
+                <button type="button" class="btn btn1_2">find out more</button>
             </div>
         </section>
         <section class="second">
@@ -35,26 +36,30 @@
                 <article>
                     <h3>company's culture</h3> 
                     <p>Celiac venmo tilde, put a bird on it vinyl man braid etsy plaid fanny pack next level 3 wolf moon chia single-origin coffee organic. Chillwave activated charcoal cliche, hoodie 3 wolf moon fam pop-up tousled swag hammock wolf bushwick. Ugh blue bottle post-ironic blog williamsburg. Glossier godard disrupt hoodie leggings vexillologist crucifix, iceland truffaut. Microdosing fashion axe biodiesel poutine, waistcoat helvetica salvia meditation ramps twee.</p>
-                    <button type="button" class="btn1">find out more</button> 
+                    <button type="button" class="btn btn2_1">find out more</button> 
                 </article>
                 <figure >
                         <img src="img/img2.jpg" alt="breakfast">
                 </figure>
+                <button type="button" class="btn btn2_2">find out more</button>
             </div>
         </section >
+<!--
         <div class="ideas">
             <h2>our crazy ideas</h2>
         </div>
+-->
         <section class="third">
             <div class="container">
                 <article>
                     <h3>experience</h3> 
                     <p>Everyday carry cray vegan microdosing waistcoat, godard portland gentrify viral vape hammock. Prism lyft cold-pressed, snackwave bespoke squid schlitz typewriter pinterest jean shorts. Kale chips pitchfork lumbersexual ugh, messenger bag forage kitsch cold-pressed cred cronut meggings umami. Gastropub ethical copper mug, authentic four loko chicharrones salvia fingerstache vaporware chia church-key hoodie single-origin coffee.</p>
-                    <button type="button" class="btn1">find out more</button> 
+                    <button type="button" class="btn btn3_1">find out more</button> 
                 </article>
                 <figure>
                         <img src="img/img3.jpg" alt="man in teh yellow smoke">
                 </figure>
+                <button type="button" class="btn btn3_2">find out more</button> 
             </div>
         </section>
         <footer>
