Add form styles

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <input type="e-mail" id="mail">
                     <label for="message">message</label>
                     <textarea rows="4" id="message"></textarea>
-                    <button type="button" class="btn2">send</button> 
+                    <button type="button" class="btn btn4">send</button> 
                 </form>
                 <p class="copyrights">created by the awwwwesomes in 2017</p>
             </div>
