Add srcset to another photos

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <button type="button" class="btn btn1_1">find out more</button> 
                 </article>
                 <figure>
-                        <img srcset="img/img1-480w.jpg 480w,
-                                    img/img1-800w.jpg 800w"
-                        sizes="(max-width: 480px) 480px,
-                               800px"
-                        src="img/img1-800w.jpg" alt="kid drawing">
+                        <img src="img/img1-800w.jpg" 
+                        srcset="img/img1-480w.jpg 480w,
+                                img/img1-800w.jpg 800w"
+                        sizes="(max-width: 480px) 480px, 800px"
+                        alt="kid drawing">
                 </figure>
                 <button type="button" class="btn btn1_2">find out more</button>
             </div>
@@ -44,7 +44,11 @@
                     <button type="button" class="btn btn2_1">find out more</button> 
                 </article>
                 <figure >
-                        <img src="img/img2.jpg" alt="breakfast">
+                        <img src="img/img2-800w.jpg" 
+                        srcset="img/img2-480w.jpg 480w,
+                                img/img2-800w.jpg 800w"
+                        sizes="(max-width: 480px) 480px, 800px"
+                        alt="breakfast">
                 </figure>
                 <button type="button" class="btn btn2_2">find out more</button>
             </div>
@@ -62,7 +66,11 @@
                     <button type="button" class="btn btn3_1">find out more</button> 
                 </article>
                 <figure>
-                        <img src="img/img3.jpg" alt="man in teh yellow smoke">
+                    <img src="img/img3-800w.jpg" 
+                    srcset="img/img3-480w.jpg 480w,
+                                img/img3-800w.jpg 800w"
+                    sizes="(max-width: 480px) 480px, 800px"
+                    alt="man in teh yellow smoke">
                 </figure>
                 <button type="button" class="btn btn3_2">find out more</button> 
             </div>
