Add tablet breakpoint

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         </header>
         <section class="first"> 
             <div class="container">
-                <article>
+                <article class="item-1">
                     <h3>projects</h3> 
                     <p>Af gastropub venmo cliche air plant meh. Mollit man bun nesciunt, commodo synth placeat forage tousled ad pitchfork tilde venmo iceland 3 wolf moon. Cray eu vape flexitarian. Next level DIY odio skateboard, listicle PBR&amp;B shoreditch blog humblebrag cornhole. Blue bottle wayfarers mumblecore af heirloom cillum. Aliquip etsy irony veniam, do whatever vice air plant microdosing paleo wayfarers flannel celiac XOXO. Affogato mumblecore migas blue bottle dolor single-origin coffee.</p>
                     <button type="button" class="btn btn1_1">find out more</button> 
                 </article>
-                <figure>
+                <figure class="item-2">
                         <img src="img/img1-800w.jpg" 
                         srcset="img/img1-480w.jpg 480w,
                                 img/img1-800w.jpg 800w"
                         sizes="(max-width: 480px) 480px, 800px"
                         alt="kid drawing">
                 </figure>
-                <button type="button" class="btn btn1_2">find out more</button>
+<!--                <button type="button" class="btn btn1_2">find out more</button>-->
             </div>
         </section>
         <section class="second">
