Adjust font sizes for small devices Reorgineze styles

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     </head>
     <body>
         <header>
-            <nav>
-                <ul>
-                    <li><a href="#">projects</a></li>
-                    <li><a href="#">team</a></li>
-                    <li><a href="#">mission</a></li>
-                    <li><a href="#">contact</a></li>
-                </ul>
-            </nav>
-            <h1>we create.</h1>
-            <p class="tagline">strategy is our first name</p>
+            <div class="container">
+                <nav>
+                    <ul>
+                        <li><a href="#">projects</a></li>
+                        <li><a href="#">team</a></li>
+                        <li><a href="#">mission</a></li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
+                </nav>
+                <h1>we create.</h1>
+                <p class="tagline">strategy is our first name</p>
+            </div>
         </header>
         <section class="first"> 
             <div class="container">
