--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <article class="clearfix">
                     <h3>projects</h3>
-                    <figure class="img1-1">
+                    <figure class="img1">
                         <img src="img/img1-800w.jpg" 
                         srcset="img/img1-480w.jpg 480w,
                                 img/img1-800w.jpg 800w"
@@ -33,40 +33,24 @@
                         alt="kid drawing">
                     </figure>
                     <p>Af gastropub venmo cliche air plant meh. Mollit man bun nesciunt, commodo synth placeat forage tousled ad pitchfork tilde venmo iceland 3 wolf moon. Cray eu vape flexitarian. Next level DIY odio skateboard, listicle PBR&amp;B shoreditch blog humblebrag cornhole. Blue bottle wayfarers mumblecore af heirloom cillum. Aliquip etsy irony veniam, do whatever vice air plant microdosing paleo wayfarers flannel celiac XOXO. Affogato mumblecore migas blue bottle dolor single-origin coffee.</p>
-                    <button type="button" class="btn btn1-1">find out more</button> 
+                    <button type="button" class="btn btn1">find out more</button> 
                 </article>
-                <figure class="img1-2">
-                        <img src="img/img1-800w.jpg" 
-                        srcset="img/img1-480w.jpg 480w,
-                                img/img1-800w.jpg 800w"
-                        sizes="(max-width: 480px) 480px, 800px"
-                        alt="kid drawing">
-                </figure>
-                <button type="button" class="btn btn1-2">find out more</button>
             </div>
         </section>
         <section class="second">
             <div class="container">
                 <article class="clearfix">
-                    <figure class="img2-1">
+                    <h3>company's culture</h3>
+                    <figure class="img2">
                         <img src="img/img2-800w.jpg" 
                         srcset="img/img2-480w.jpg 480w,
                                 img/img2-800w.jpg 800w"
                         sizes="(max-width: 480px) 480px, 800px"
                         alt="breakfast">
                     </figure>
-                    <h3>company's culture</h3>
                     <p>Celiac venmo tilde, put a bird on it vinyl man braid etsy plaid fanny pack next level 3 wolf moon chia single-origin coffee organic. Chillwave activated charcoal cliche, hoodie 3 wolf moon fam pop-up tousled swag hammock wolf bushwick. Ugh blue bottle post-ironic blog williamsburg. Glossier godard disrupt hoodie leggings vexillologist crucifix, iceland truffaut. Microdosing fashion axe biodiesel poutine, waistcoat helvetica salvia meditation ramps twee.</p>
-                    <button type="button" class="btn btn2-1">find out more</button> 
+                    <button type="button" class="btn btn2">find out more</button> 
                 </article>
-                <figure class="img2-2">
-                        <img src="img/img2-800w.jpg" 
-                        srcset="img/img2-480w.jpg 480w,
-                                img/img2-800w.jpg 800w"
-                        sizes="(max-width: 480px) 480px, 800px"
-                        alt="breakfast">
-                </figure>
-                <button type="button" class="btn btn2-2">find out more</button>
             </div>
         </section >
         <div class="ideas">
@@ -76,7 +60,7 @@
             <div class="container">
                 <article class="clearfix">
                     <h3>experience</h3>
-                    <figure class="img3-1">
+                    <figure class="img3">
                         <img src="img/img3-800w.jpg" 
                         srcset="img/img3-480w.jpg 480w,
                                     img/img3-800w.jpg 800w"
@@ -84,16 +68,8 @@
                         alt="man in teh yellow smoke">
                     </figure>
                     <p>Everyday carry cray vegan microdosing waistcoat, godard portland gentrify viral vape hammock. Prism lyft cold-pressed, snackwave bespoke squid schlitz typewriter pinterest jean shorts. Kale chips pitchfork lumbersexual ugh, messenger bag forage kitsch cold-pressed cred cronut meggings umami. Gastropub ethical copper mug, authentic four loko chicharrones salvia fingerstache vaporware chia church-key hoodie single-origin coffee.</p>
-                    <button type="button" class="btn btn3-1">find out more</button>
+                    <button type="button" class="btn btn3">find out more</button>
                 </article>
-                <figure class="img3-2">
-                        <img src="img/img3-800w.jpg" 
-                        srcset="img/img3-480w.jpg 480w,
-                                    img/img3-800w.jpg 800w"
-                        sizes="(max-width: 480px) 480px, 800px"
-                        alt="man in teh yellow smoke">
-                </figure>
-                <button type="button" class="btn btn3-2">find out more</button> 
             </div>
         </section>
         <footer>
