Change copyrights Change readme file

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <textarea rows="4" id="message"></textarea>
                     <button type="button" class="btn btn4">send</button> 
                 </form>
-                <p class="copyrights">created by the awwwwesomes in 2017</p>
+                <p class="copyrights">designed by <span><a href="https://theawwwesomes.org/">the awwwwesomes</a></span><br>coded by <span><a href="https://github.com/PatrycjaKanigowska">Patrycja Kanigowska</a></span></p>
             </div>
         </footer>
     </body>
